turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:10: error: '=' expected but ';' found.
var x==getCouleurSol();
                      ^